6_main_contractor_set_b3ac6d56/webserver/2_webserver_api_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: contractor-api
    x500name_uuid: b3ac6d56
  name: contractor-api
  namespace: maple-topazelite-webservers-nodes
  annotations:
    cloud.google.com/backend-config: '{"ports": {"8080":"my-backendconfig"}}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: contractor-api
    x500name_uuid: b3ac6d56
  type: NodePort
