6_main_contractor_set_b3ac6d56/webserver/hello-world-service-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-1
  namespace: maple-topazelite-webservers-nodes
spec:
  type: NodePort
  selector:
    greeting: hello
    version: one
  ports:
  - protocol: TCP
    port: 60000
    targetPort: 50000
