6_main_contractor_set_b3ac6d56/webserver/4_main_contractor_ingress-akv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-body-size: "55m"
  labels:
    app: contractor-webserver
    webserver_domain_uuid: 11e389aa
    x500name_uuid: b3ac6d56
  name: contractor-webserver
  namespace: maple-topazelite-webservers-nodes
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: contractor-frontend
      port:
        number: 80
  rules:
  - host: real-estate-contractor.topaz-elite-maple.com
    http:
      paths:
      - backend:
          service:
            name: contractor-api
            port:
              number: 8080
        path: /api
        pathType: Prefix
      - backend:
          service:
            name: contractor-frontend
            port:
              number: 80
        path: /ui
        pathType: Prefix
      - backend:
          service:
            name: contractor-frontend
            port:
              number: 80
        path: /static
        pathType: Prefix
  tls:
  - hosts:
    - real-estate-contractor.topaz-elite-maple.com
    secretName: contractor-ingress-tls-csi
