6_main_contractor_set_b3ac6d56/webserver/4_main_contractor_ingress-without-nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.global-static-ip-name: topaz-elite-contractor-global-ip-1
  labels:
    app: contractor-webserver
    webserver_domain_uuid: 11e389aa
    x500name_uuid: b3ac6d56
  name: contractor-webserver
  namespace: maple-topazelite-webservers-nodes
spec:
  #defaultBackend:
  # service:
  #   name: contractor-frontend
  #   port:
  #     number: 80
  rules:
  - http:
      paths:
      - backend:
          service:
            name: contractor-api
            port:
              number: 8080
        path: /api
        pathType: Prefix
      - backend:
          service:
            name: contractor-frontend
            port:
              number: 80
        path: /ui
        pathType: Prefix
      - backend:
          service:
            name: contractor-frontend
            port:
              number: 80
        path: /static
        pathType: Prefix
