6_main_contractor_set_b3ac6d56/webserver/test.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example
  annotations:
    kubernetes.io/ingress.global-static-ip-name: topaz-elite-contractor-global-ip-1
  namespace: maple-topazelite-webservers-nodes 
spec:
  ingressClassName: gce
  rules:
  - http:
     paths:
       - pathType: Prefix
         backend:
           service:
             name: hello-world-1
             port:
               number: 60000
         path: /foo
